<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FLIGHTS"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depature"></TextView>
        <Button
            android:id="@+id/btn_choose_depature"
            style="@style/airline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose_depature"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"></TextView>
        <Button
            android:id="@+id/btn_choose_arrival"
            style="@style/airline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose_arrival"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depature_date"></TextView>
        <EditText
            android:id="@+id/edt_depature"
            style="@style/airline"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_date"></TextView>
        <EditText
            android:id="@+id/edt_arrival"
            style="@style/airline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="date"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_passengers"></TextView>
        <EditText
            style="@style/airline"
            android:id="@+id/edt_passenger"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabin_class"></TextView>
        <Button
            android:id="@+id/btn_choose_class"
            style="@style/airline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose_class"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_search_flights"
            style="@style/airline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flights"></Button>
    </LinearLayout>

</LinearLayout>